--- a/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
+++ b/eTools Ultimate/Views/Dialogs/MoverDropListDialog.xaml
@@ -7,6 +7,7 @@
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Dialogs"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:eTools_Ultimate.Models"
+    xmlns:moverModels="clr-namespace:eTools_Ultimate.Models.Movers"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:viewmodels="clr-namespace:eTools_Ultimate.ViewModels.Controls.Dialogs"
     Title="{Binding Title}"
@@ -102,13 +103,13 @@
                     BorderThickness="0"
                     ItemsSource="{Binding DropListView}">
                     <TreeView.Resources>
-                        <HierarchicalDataTemplate DataType="{x:Type models:DropKind}" ItemsSource="{Binding Items}">
+                        <HierarchicalDataTemplate DataType="{x:Type moverModels:DropKind}" ItemsSource="{Binding Items}">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="📁 " />
                                 <TextBlock Text="{Binding ItemKind3Identifier}" />
                             </StackPanel>
                         </HierarchicalDataTemplate>
-                        <DataTemplate DataType="{x:Type models:DropGold}">
+                        <DataTemplate DataType="{x:Type moverModels:DropGold}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
@@ -134,11 +135,11 @@
                                     <TextBlock
                                         FontSize="12"
                                         Foreground="{DynamicResource TextFillColorSecondaryBrush}"
-                                        Text="{Binding Item.Identifier}" />
+                                        Text="{Binding ItemIdentifier}" />
                                 </StackPanel>
                             </Grid>
                         </DataTemplate>
-                        <DataTemplate DataType="{x:Type models:DropItem}">
+                        <DataTemplate DataType="{x:Type moverModels:DropItem}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
@@ -204,7 +205,7 @@
             <StackPanel Grid.Column="2" Width="200">
                 <ContentControl Content="{Binding SelectedItem, ElementName=DropListTreeView}">
                     <ContentControl.Resources>
-                        <DataTemplate DataType="{x:Type models:DropGold}">
+                        <DataTemplate DataType="{x:Type moverModels:DropGold}">
                             <UniformGrid VerticalAlignment="Top" Columns="1">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -216,7 +217,7 @@
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
                                         ClearButtonEnabled="False"
-                                        Value="{Binding Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                        Value="{Binding DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <Grid Margin="0,10,0,0">
                                     <Grid.RowDefinitions>
@@ -228,11 +229,11 @@
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
                                         ClearButtonEnabled="False"
-                                        Value="{Binding Prop.DwNumber2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                        Value="{Binding DwNumber2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                             </UniformGrid>
                         </DataTemplate>
-                        <DataTemplate DataType="{x:Type models:DropItem}">
+                        <DataTemplate DataType="{x:Type moverModels:DropItem}">
                             <UniformGrid VerticalAlignment="Top" Columns="1">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -257,7 +258,7 @@
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
                                         ClearButtonEnabled="False"
-                                        Value="{Binding Prop.DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                        Value="{Binding DwNumber, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <Grid Margin="0,10,0,0">
                                     <Grid.RowDefinitions>
@@ -270,7 +271,7 @@
                                         Margin="0,5,0,0"
                                         ClearButtonEnabled="False"
                                         Cursor="Arrow"
-                                        Value="{Binding Prop.DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                        Value="{Binding DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                                 </Grid>
                                 <Grid Margin="0,10,0,0">
                                     <Grid.RowDefinitions>
@@ -290,7 +291,7 @@
                                 </Grid>
                             </UniformGrid>
                         </DataTemplate>
-                        <DataTemplate DataType="{x:Type models:DropKind}">
+                        <DataTemplate DataType="{x:Type moverModels:DropKind}">
                             <UniformGrid Columns="1">
                                 <Grid>
                                     <Grid.RowDefinitions>
@@ -357,7 +358,7 @@
                                         Grid.Row="1"
                                         Margin="0,5,0,0"
                                         IsEnabled="False"
-                                        Value="{Binding Prop.DwItemRare, Mode=OneWay, UpdateSourceTrigger=LostFocus}" />
+                                        Value="{Binding DwItemRare, Mode=OneWay, UpdateSourceTrigger=LostFocus}" />
                                 </Grid>
                             </UniformGrid>
                         </DataTemplate>
