--- a/eTools Ultimate/Views/Pages/MoversPage.xaml
+++ b/eTools Ultimate/Views/Pages/MoversPage.xaml
@@ -12,6 +12,7 @@
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:eTools_Ultimate.Models"
+    xmlns:moverModels="clr-namespace:eTools_Ultimate.Models.Movers"
     xmlns:pageViewModels="clr-namespace:eTools_Ultimate.ViewModels.Pages"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -199,10 +200,10 @@
                                 SelectedValue="{Binding Type, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                 SelectedValuePath="Tag"
                                 Style="{StaticResource AppComboBoxStyle}">
-                                <ComboBoxItem Content="{i18n:StringLocalizer 'Monster'}" Tag="{x:Static models:MoverTypes.MONSTER}" />
-                                <ComboBoxItem Content="{i18n:StringLocalizer 'NPC'}" Tag="{x:Static models:MoverTypes.NPC}" />
-                                <ComboBoxItem Content="{i18n:StringLocalizer 'Pet'}" Tag="{x:Static models:MoverTypes.PET}" />
-                                <ComboBoxItem Content="{i18n:StringLocalizer 'Character'}" Tag="{x:Static models:MoverTypes.CHARACTER}" />
+                                <ComboBoxItem Content="{i18n:StringLocalizer 'Monster'}" Tag="{x:Static moverModels:MoverType.MONSTER}" />
+                                <ComboBoxItem Content="{i18n:StringLocalizer 'NPC'}" Tag="{x:Static moverModels:MoverType.NPC}" />
+                                <ComboBoxItem Content="{i18n:StringLocalizer 'Pet'}" Tag="{x:Static moverModels:MoverType.PET}" />
+                                <ComboBoxItem Content="{i18n:StringLocalizer 'Character'}" Tag="{x:Static moverModels:MoverType.CHARACTER}" />
                             </ComboBox>
                         </Grid>
 
@@ -355,7 +356,7 @@
                                 <Style BasedOn="{StaticResource FormFieldStyle}" TargetType="Grid">
                                     <Setter Property="Visibility" Value="Collapsed" />
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Type}" Value="{x:Static models:MoverTypes.MONSTER}">
+                                        <DataTrigger Binding="{Binding Type}" Value="{x:Static moverModels:MoverType.MONSTER}">
                                             <Setter Property="Visibility" Value="Visible" />
                                         </DataTrigger>
                                     </Style.Triggers>
@@ -376,7 +377,7 @@
                             <ui:NumberBox
                                 Grid.Row="1"
                                 SpinButtonPlacementMode="Inline"
-                                Value="{Binding Prop.DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                                Value="{Binding DwLevel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                         </Grid>
 
                         <!--  EXP Value  -->
@@ -385,7 +386,7 @@
                                 <Style BasedOn="{StaticResource FormFieldStyle}" TargetType="Grid">
                                     <Setter Property="Visibility" Value="Collapsed" />
                                     <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Type}" Value="{x:Static models:MoverTypes.MONSTER}">
+                                        <DataTrigger Binding="{Binding Type}" Value="{x:Static moverModels:MoverType.MONSTER}">
                                             <Setter Property="Visibility" Value="Visible" />
                                         </DataTrigger>
                                     </Style.Triggers>
@@ -406,7 +407,7 @@
                             <ui:NumberBox
                                 Grid.Row="1"
                                 SpinButtonPlacementMode="Inline"
-                                Value="{Binding Prop.NExpValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                                Value="{Binding NExpValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                         </Grid>
                     </UniformGrid>
                 </StackPanel>
@@ -421,7 +422,7 @@
                     <Style TargetType="StackPanel">
                         <Setter Property="Visibility" Value="Collapsed" />
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding Type}" Value="{x:Static models:MoverTypes.MONSTER}">
+                            <DataTrigger Binding="{Binding Type}" Value="{x:Static moverModels:MoverType.MONSTER}">
                                 <Setter Property="Visibility" Value="Visible" />
                             </DataTrigger>
                         </Style.Triggers>
@@ -446,7 +447,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwAddHp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Value="{Binding DwAddHp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
                     <!--  Mana Points  -->
@@ -466,7 +467,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwAddMp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwAddMp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Action Radius  -->
@@ -512,7 +513,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwAtkMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Value="{Binding DwAtkMin, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
                     <!--  Attack max.  -->
@@ -532,7 +533,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwAtkMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Value="{Binding DwAtkMax, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
 
                     <!--  STR  -->
@@ -552,7 +553,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwStr, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwStr, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  STA  -->
@@ -572,7 +573,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwSta, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwSta, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  DEX  -->
@@ -592,7 +593,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwDex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwDex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  INT  -->
@@ -612,7 +613,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwInt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwInt, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Hit Rate  -->
@@ -632,7 +633,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwHR, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwHR, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Evasion Rate  -->
@@ -652,7 +653,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwER, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwER, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Attack Delay  -->
@@ -672,7 +673,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwReAttackDelay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwReAttackDelay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
                     <!--  Armor  -->
                     <Grid Style="{StaticResource FormFieldStyle}">
@@ -691,7 +692,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwNaturalArmor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwNaturalArmor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Abrasion  -->
@@ -763,7 +764,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.DwResisMgic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding DwResisMgic, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Resistance Electricity  -->
@@ -783,7 +784,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.NResistElecricity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding NResistElecricity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Resistance Fire  -->
@@ -803,7 +804,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.NResistFire, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding NResistFire, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Resistance Wind  -->
@@ -823,7 +824,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.NResistWind, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding NResistWind, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Resistance Water  -->
@@ -843,7 +844,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.NResistWater, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding NResistWater, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
 
                     <!--  Resistance Earth  -->
@@ -863,7 +864,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.NResistEarth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
+                            Value="{Binding NResistEarth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource NumberFormatConverter}}" />
                     </Grid>
                     <Grid Style="{StaticResource FormFieldStyle}">
                         <Grid.RowDefinitions>
@@ -880,7 +881,7 @@
                         </StackPanel>
                         <ComboBox
                             Grid.Row="1"
-                            SelectedValue="{Binding Prop.EElementType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                            SelectedValue="{Binding EElementType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                             SelectedValuePath="Tag"
                             Style="{StaticResource AppComboBoxStyle}">
                             <ComboBoxItem Content="{i18n:StringLocalizer 'None'}">
@@ -934,7 +935,7 @@
                         <ui:NumberBox
                             Grid.Row="1"
                             SpinButtonPlacementMode="Inline"
-                            Value="{Binding Prop.WElementAtk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                            Value="{Binding WElementAtk, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                     </Grid>
                 </UniformGrid>
                 <Separator Margin="0,10,0,5" />
